Use package.json files field
Replaces `.npmignore` with the `files` field in `package.json`.
Uncompiled source code and tests will no longer be included in the
published package. This fixes #50 and produces a smaller bundle as a
positive side effect.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "url": "https://github.com/brigand/babel-plugin-flow-react-proptypes/issues"
   },
   "homepage": "https://github.com/brigand/babel-plugin-flow-react-proptypes#readme",
+  "files": [
+    "lib/*.js"
+  ],
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
