--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^4.0.0",
     "eslint-plugin-react": "^7.0.1",
     "jest": "^20.0.4",
+    "jest-environment-node-debug": "^2.0.0",
     "prettier": "^1.4.4",
     "react": "^15.5.4",
     "react-test-renderer": "^15.5.4"
