--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "prettier": "^1.4.4",
     "react": "^15.5.4",
     "react-test-renderer": "^15.5.4",
-    "uglify-js": "^3.2.2"
+    "uglify-es": "^3.3.8"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
