--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "cross-env BABEL_ENV=production babel src/ --out-dir lib/ --ignore src/__tests__ --presets @babel/env,@babel/react",
     "predeploy": "npm run build && npm run lint",
     "prepublish": "npm run build && npm run lint",
-    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
